# Cortex

./: .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  test-rag.md  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
docker/: docker-compose.yml
docker/services/: embeddings.Dockerfile  rag.Dockerfile  whisper.Dockerfile
scripts/: gen-icons.mjs  services.sh  setup.ps1  setup.sh
services/embeddings/: embeddings.py  main.py  requirements.txt
services/rag/: chunker.py  main.py  requirements.txt  retriever.py
services/whisper/: main.py  requirements.txt  transcriber.py
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: chat.rs  files.rs  mod.rs  models.rs  system.rs  voice.rs
src-tauri/src/models/: types.rs
src-tauri/src/services/: indexer.rs  mod.rs  ollama.rs  storage.rs
src/data/: accents.ts  personas.ts
src/hooks/: useChat.ts  useGlobalShortcuts.ts  useModels.ts  useSystem.ts  useTheme.ts  useVoice.ts
src/services/: backup.test.ts  backup.ts  context.test.ts  context.ts  indexing.ts  privacy.test.ts  privacy.ts  rag.test.ts  rag.ts  search.test.ts  search.ts  summarize.ts  thinking.test.ts  thinking.ts  tools.test.ts  tools.ts  tts.ts
src/stores/: chatStore.ts  fileStore.ts  modelStore.ts  notesStore.ts  personaStore.ts  promptStore.ts  settingsStore.ts  statsStore.ts  uiStore.ts
src/types/: chat.ts  files.ts  (+2 more)
(+29 files in other folders)
